[all-catalog-items] - Add call to MarketplaceService.